Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,22 +33,17 @@
 <li>Turma 2: Sexta 7:50 - 12:20</li>
 </ul>
 
-<p><strong>ATENÇÃO</strong>: As aulas das duas turmas serão ministradas na sala <del>6145-2F a
-partir do dia 10/09/2015</del> <strong>6134F</strong> a partir do dia 16/09/2015.</p>
+<p><strong>ATENÇÃO</strong>: As aulas das duas turmas serão ministradas na sala <strong>6134F</strong></p>
 
 <p><strong>Professor:</strong> <a href="http://www.leouieda.com/">Leonardo Uieda</a> - Sala 2019A</p>
 
 <p><strong>Atendimento:</strong> Segunda 13:30 - 14:30</p>
 
-<p><strong>Laboratório:</strong> Os alunos podem utilizar o laboratório LAGEX (sala 2031A) para
-trabalhar nas práticas fora da aula. O LAGEX conta com computadores com Ubuntu
-Linux com git e Python já instalados. Também há mesas e internet para os que
-queiram trabalhar com seu próprio computador.</p>
+<p><strong>Laboratório:</strong> Os alunos podem utilizar o laboratório LAGEX (sala <strong>2031A</strong>)</p>
 
 <p><strong>Lista de e-mail:</strong> Os alunos devem se cadastrar na lista de e-mail do curso.
-Use o link abaixo para cadastrar seu e-mail:</p>
-
-<p><a href="http://goo.gl/forms/I5epmPCg3e">http://goo.gl/forms/I5epmPCg3e</a></p>
+Use o seguinte link para cadastrar seu e-mail:
+<a href="http://goo.gl/forms/I5epmPCg3e">http://goo.gl/forms/I5epmPCg3e</a></p>
 
 <p><strong>TODOS OS COMUNICADOS SERÃO FEITOS ATRAVÉS DA LISTA DE E-MAIL.</strong></p>
 
@@ -90,17 +85,100 @@ ridicularização dos colegas.</p>
 <strong>tragam seus laptops para a aula</strong>. Alunos que não possuem computador não
 serão prejudicados. Precisaremos de ao menos um computador por grupo.</p>
 
-<p>Textos, códigos, slides, etc estarão disponíveis no site da disciplina.</p>
+<p>Textos, códigos, slides, etc estarão disponíveis nesse site.</p>
+
+<h2>
+<a id="cronograma" class="anchor" href="#cronograma" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cronograma</h2>
+
+<p>Esse cronograma ainda não é definitivo. Provavelmente sofrerá alterações ao
+longo do semestre.</p>
+
+<p><strong>Cada prática inclui links e referências para o material relevante.</strong></p>
+
+<table>
+<thead>
+<tr>
+<th align="center">Aula</th>
+<th align="left">Tema</th>
+<th align="center">Prática</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="center">1</td>
+<td align="left">Apresentação e introdução a algoritmos e logica de programação</td>
+<td align="center"><a href="https://github.com/leouieda/matematica-especial/blob/master/praticas/sort.md">sort</a></td>
+</tr>
+<tr>
+<td align="center">2</td>
+<td align="left">Controle de versão com git</td>
+<td align="center"><a href="https://github.com/leouieda/matematica-especial/blob/master/praticas/git.md">git</a></td>
+</tr>
+<tr>
+<td align="center">3</td>
+<td align="left">Python: variáveis, loops, condições e gráficos simples</td>
+<td align="center"><a href="https://github.com/leouieda/mat-esp-python-intro-2015">python-intro</a></td>
+</tr>
+<tr>
+<td align="center">4</td>
+<td align="left">Python: Jupyter notebook, lendo dados de arquivos e programas simples</td>
+<td align="center"><a href="https://github.com/leouieda/python-intro-2">python-intro-2</a></td>
+</tr>
+<tr>
+<td align="center">5</td>
+<td align="left">Integração numérica</td>
+<td align="center"><a href="https://github.com/leouieda/mat-esp-integracao">integracao</a></td>
+</tr>
+<tr>
+<td align="center">6</td>
+<td align="left">Matrizes e vetores</td>
+<td align="center"><a href="https://github.com/leouieda/mat-esp-matrizes-vetores">matrizes-vetores</a></td>
+</tr>
+<tr>
+<td align="center">7</td>
+<td align="left">Solução de sistemas lineares</td>
+<td align="center"><a href="https://github.com/leouieda/mat-esp-sistema-linear">sistema-linear</a></td>
+</tr>
+<tr>
+<td align="center">8</td>
+<td align="left">Python: funções e programação defensiva</td>
+<td align="center"><a href="https://github.com/leouieda/mat-esp-funcoesa">funcoes</a></td>
+</tr>
+<tr>
+<td align="center">9</td>
+<td align="left">Método dos mínimos quadrados</td>
+<td align="center"></td>
+</tr>
+<tr>
+<td align="center">10</td>
+<td align="left">Equações diferenciais parciais: método das diferenças finitas</td>
+<td align="center"></td>
+</tr>
+<tr>
+<td align="center">11</td>
+<td align="left">Triângulos esféricos e representação de dados em mapas</td>
+<td align="center"></td>
+</tr>
+<tr>
+<td align="center">12</td>
+<td align="left">Aplicação a dados de geociências</td>
+<td align="center"></td>
+</tr>
+</tbody>
+</table>
 
 <h2>
 <a id="avaliação" class="anchor" href="#avalia%C3%A7%C3%A3o" aria-hidden="true"><span class="octicon octicon-link"></span></a>Avaliação</h2>
 
-<p>Teremos duas fontes de nota:</p>
+<p><del>Teremos duas fontes de nota:</del></p>
 
 <ol>
-<li>Média das notas das atividades práticas (70% da nota)</li>
-<li>Projeto realizado ao longo do curso (30% da nota)</li>
+<li><del>Média das notas das atividades práticas (70% da nota)</del></li>
+<li><del>Projeto realizado ao longo do curso (30% da nota)</del></li>
 </ol>
+
+<p><strong>[16/11/2015]: O projeto foi cancelado por falta de tempo.
+A média final será 100% a média das práticas (ver abaixo).</strong></p>
 
 <p>As partes práticas das aulas serão baseadas no tema da semana.  Os alunos
 receberão instruções para realizar a prática referente ao tema e deverão
@@ -108,8 +186,77 @@ entregar a solução ao final da aula (um por grupo).  A média das práticas se
 feita com base nas notas de cada prática (uma por tema).  Para não prejudicar
 alunos que faltarem eventualmente, vou descartar as duas menores notas.</p>
 
-<p>Os projetos serão feitos em grupo, com um tema diferente para cada grupo (a
-definir). O projeto será desenvolvido ao longo do semestre.</p>
+<p><del>Os projetos serão feitos em grupo, com um tema diferente para cada grupo (a
+definir). O projeto será desenvolvido ao longo do semestre.</del></p>
+
+<h3>
+<a id="avaliação-das-práticas" class="anchor" href="#avalia%C3%A7%C3%A3o-das-pr%C3%A1ticas" aria-hidden="true"><span class="octicon octicon-link"></span></a>Avaliação das práticas</h3>
+
+<p>Utilizaremos a lista abaixo para avaliar a solução entregue de cada prática.</p>
+
+<ul>
+<li>[ ] Mensagens de commit que explicam claramente a mudança que foi feita
+[total|parcial|zero] 0.5 pt</li>
+<li>[ ] Formatação do código apropriada.
+Ex: <code>espacamento = (maximo - minimo)/(N - 1)</code>,
+<code>indices = range(0, N, 1)</code>, <code>dado = dados[i + 1]</code> == BOM.
+<code>espacamento=(maximo-minimo)/ (N-1)</code>, <code>indices=range (0,N,1)</code>,
+<code>dado= dados [i+ 1]</code> == RUIM [total|parcial|zero] 0.5 pt</li>
+<li>[ ] Utilizar variáveis ao invés de colocar número "na mão".
+Ex: <code>for i in range(0, N):</code>, <code>A[k][N - 1]</code> == BOM.
+<code>for i in range(0, 39):</code>, <code>A[k][47]</code> == RUIM. [total|parcial|zero] 1 pt</li>
+<li>[ ] Código com comentários que explicam "por que" algo foi feito, não só
+"o que" foi feito [total|parcial|zero] 1 pt</li>
+<li>[ ] Nomes de variáveis descritivos. Ex: <code>temperatura</code>, <code>media_por_hora</code>,
+<code>linha</code>, <code>somatorio</code> == BOM. <code>a</code>, <code>var</code>, <code>meh</code>, <code>lista</code> == RUIM.
+[total|parcial|zero] 2 pt</li>
+<li>[ ] Código produz a solução correta (<strong>exatamente</strong> como especificado em
+"Resultado esperado") [total|parcial|zero] 5 pt</li>
+<li>[ ] Tarefa bônus [total|parcial|zero] 1 pt extra (não será considerado
+caso a nota já seja 10)</li>
+</ul>
+
+<p>Cada critério de avaliação poderá receber pontuação:</p>
+
+<ul>
+<li>Total: se atender <strong>perfeitamente</strong> ao critério</li>
+<li>Parcial: (metade da nota) se atender parcialmente ao critério</li>
+<li>Zero: se falhar ao critério</li>
+</ul>
+
+<p>Note que a nota máxima, incluindo a tarefa bônus, é 10.
+Cada grupo terá acesso a correção de sua solução.</p>
+
+<h3>
+<a id="entrega-das-soluções" class="anchor" href="#entrega-das-solu%C3%A7%C3%B5es" aria-hidden="true"><span class="octicon octicon-link"></span></a>Entrega das soluções</h3>
+
+<p>A solução de cada prática será um repositório no <a href="http://github.com/">Github</a>
+com o código feito pelos alunos (criado a partir dos templates no
+"Cronograma").
+A entrega das soluções será feita criando uma
+<a href="https://guides.github.com/features/issues/">Issue</a>
+no repositório da disciplina
+<a href="https://github.com/leouieda/matematica-especial/">leouieda/matematica-especial</a>.
+Utilize o link abaixo para ir direto para as Issues:</p>
+
+<p><a href="https://github.com/leouieda/matematica-especial/issues">https://github.com/leouieda/matematica-especial/issues</a></p>
+
+<p>Cada grupo deve criar uma Issue para entragar cada prática.
+A issue deverá seguir o padrão abaixo:</p>
+
+<ul>
+<li>Título: Deve conter o nome da prática seguido dos nomes dos integrantes do
+grupo e a qual turma pertecem (caso haja mais de uma). Ex: "Prática
+Integração: Bilbo, John, Arthur - Turma 1"</li>
+<li>Corpo: Deve conter o link para o repositório do grupo (ex:
+<code>https://github.com/mat-esp-uerj/integracao-sociedade-42</code>) e qualquer
+comentário que achar necessário (ex: problemas com os commits, erros que foram
+arrumados depois, dificuldades, etc).</li>
+</ul>
+
+<p>Um exemplo de criação de uma Issue:</p>
+
+<p><img src="https://raw.githubusercontent.com/leouieda/matematica-especial/master/images/exemplo-issue.png" alt="Exemplo de uma Issue"></p>
 
 <h2>
 <a id="conduta" class="anchor" href="#conduta" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conduta</h2>
@@ -243,96 +390,6 @@ Distribution</a>. Selecione o instalador que
 reflete o seu sistema (Mac OSX). Tenha certeza de que está baixando
 a versão do <strong>Python 3.4</strong>, não a 2.7.</li>
 </ul>
-
-<h2>
-<a id="projeto" class="anchor" href="#projeto" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projeto</h2>
-
-<p>Em breve.</p>
-
-<h2>
-<a id="cronograma" class="anchor" href="#cronograma" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cronograma</h2>
-
-<p>Esse cronograma ainda não é definitivo. Provavelmente sofrerá alterações ao
-longo do semestre.</p>
-
-<p><strong>Cada prática inclui links e referências para o material relevante.</strong></p>
-
-<table>
-<thead>
-<tr>
-<th align="center">Aula</th>
-<th align="left">Tema</th>
-<th align="center">Prática</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td align="center">1</td>
-<td align="left">Apresentação e introdução a algoritmos e logica de programação</td>
-<td align="center"><a href="https://github.com/leouieda/matematica-especial/blob/master/praticas/sort.md">sort</a></td>
-</tr>
-<tr>
-<td align="center">2</td>
-<td align="left">Unix shell (básico) e Controle de versão com git</td>
-<td align="center"><a href="https://github.com/leouieda/matematica-especial/blob/master/praticas/git.md">git</a></td>
-</tr>
-<tr>
-<td align="center">3</td>
-<td align="left">Python: variáveis, loops, condições e gráficos simples</td>
-<td align="center"><a href="https://github.com/leouieda/mat-esp-python-intro-2015">python-intro</a></td>
-</tr>
-<tr>
-<td align="center">4</td>
-<td align="left">Python: Jupyter notebook, lendo dados de arquivos e programas simples</td>
-<td align="center"><a href="https://github.com/leouieda/python-intro-2">python-intro-2</a></td>
-</tr>
-<tr>
-<td align="center">5</td>
-<td align="left">Integração numérica</td>
-<td align="center"><a href="https://github.com/leouieda/mat-esp-integracao">integracao</a></td>
-</tr>
-<tr>
-<td align="center">6</td>
-<td align="left">Matrizes e vetores</td>
-<td align="center"><a href="https://github.com/leouieda/mat-esp-matrizes-vetores">matrizes-vetores</a></td>
-</tr>
-<tr>
-<td align="center">7</td>
-<td align="left">Solução de sistemas lineares</td>
-<td align="center"></td>
-</tr>
-<tr>
-<td align="center">8</td>
-<td align="left">Python: estruturação de um programa, funções e programação defensiva</td>
-<td align="center"></td>
-</tr>
-<tr>
-<td align="center">9</td>
-<td align="left">Método dos mínimos quadrados</td>
-<td align="center"></td>
-</tr>
-<tr>
-<td align="center">10</td>
-<td align="left">Transformada de Fourier</td>
-<td align="center"></td>
-</tr>
-<tr>
-<td align="center">11</td>
-<td align="left">Solução de equações diferenciais parciais: método das diferenças finitas</td>
-<td align="center"></td>
-</tr>
-<tr>
-<td align="center">12</td>
-<td align="left">Triângulos esféricos e representação de dados em mapas</td>
-<td align="center"></td>
-</tr>
-<tr>
-<td align="center">13</td>
-<td align="left">Apresentação dos projetos</td>
-<td align="center"></td>
-</tr>
-</tbody>
-</table>
 
 <h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
