Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ longo do semestre.</p>
 <tr>
 <td align="center">9</td>
 <td align="left">Método dos mínimos quadrados</td>
-<td align="center"></td>
+<td align="center"><a href="https://github.com/leouieda/mat-esp-minimos-quadrados">minimos-quadrados</a></td>
 </tr>
 <tr>
 <td align="center">10</td>
